Fix color of vertical scrollbar

--- a/app/_assets/scss/module/_scrollbars.scss
+++ b/app/_assets/scss/module/_scrollbars.scss
@@ -3,7 +3,7 @@
 // ============================================================================
 
 ::-webkit-scrollbar {
-  background: $white;
+  background: #fafafa;
   height: 5px;
   width: 5px;
 }
@@ -12,6 +12,9 @@
 ::-webkit-scrollbar-track {
   @include border-radius(5px);
   background: #fafafa;
+  &:vertical {
+    background: $header-border-top-color;
+  }
 }
 
 // Handle
